Implemented coundown timer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
       <header>
         <h1 class="top-element">WHAC-A-MOLE</h1>
-        <h2 class="top=element">TIMER</h2>
+        <h2 class="timer">TIME LEFT: 10</h2>
       </header>
       <div class="board">
         <div class="mole"></div>
