added some style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <h2 class="timer">TIME LEFT: 10</h2>
       </header>
       <div class="board">
-        <div class="mole"></div>
+        <div class="mole">
+          <!-- <img class="mole-asst" src="./assets/mole.png" alt="" /> -->
+        </div>
         <div class="mole"></div>
         <div class="mole"></div>
         <div class="mole"></div>
