added styling and board to landing page

--- a/landing.html
+++ b/landing.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="landing-board">
+        <h3>WELCOME TO</h3>
+        <h1>WHAC-A-MOLE</h1>
+        <a href="./index.html">
+          <button class="start-btn">Enter</button>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
