--- a/landing.html
+++ b/landing.html
@@ -14,8 +14,13 @@
   <body>
     <div>
       <div class="landing-board">
-        <h3>WELCOME TO</h3>
+        <h3>HEKMAFLO PRESENTS</h3>
         <h1>WHAC-A-MOLE</h1>
+        <p>INSTRUCTIONS:</p>
+        <p id="instructions">
+          Press start to start the timer and click on the moles to add to your
+          score
+        </p>
         <a href="./index.html">
           <button class="start-btn">Enter</button>
         </a>
