added mole whac sound

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <div class="score">
       <button class="start-btn">START</button>
     </div>
+    <div class="sound"></div>
   </body>
 </html>
