--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="./logic.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
@@ -15,25 +12,19 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1 class="top-title">WHAC-A-MOLE</h1>
-      <h2 class="timer">TIME LEFT:1:00</h2>
-      <h2 id="the-score">CURRENT SCORE:0</h2>
-    </header>
-    <div class="board">
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
-      <div class="mole"></div>
+    <div>
+      <div class="landing-board">
+        <h3>HEKMAFLO PRESENTS</h3>
+        <h1>WHAC-A-MOLE</h1>
+        <p>INSTRUCTIONS:</p>
+        <p id="instructions">
+          Press start to start the timer and click on the moles to add to your
+          score
+        </p>
+        <a href="./game.html">
+          <button class="start-btn">Enter</button>
+        </a>
+      </div>
     </div>
-    <div class="score">
-      <button class="start-btn">START</button>
-    </div>
-    <div class="sound"></div>
   </body>
 </html>
