added reset button to the html

--- a/game.html
+++ b/game.html
@@ -33,6 +33,7 @@
     </div>
     <div class="score">
       <button class="start-btn">START</button>
+      <button class="start-btn" id="reset-btn">RESET</button>
     </div>
     <div class="sound"></div>
   </body>
