reset button now works

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <a href="./game.html">
           <button class="start-btn">Enter</button>
         </a>
+        <div class="github-space">
+          <img class="github" src="./assets/github.jpeg" alt="github" />
+          <a href="https://github.com/hekmaflo"><h4>GitHub:Hekmaflo</h4></a>
+        </div>
       </div>
     </div>
   </body>
