made board bigger

--- a/game.html
+++ b/game.html
@@ -30,6 +30,9 @@
       <div class="mole"></div>
       <div class="mole"></div>
       <div class="mole"></div>
+      <div class="mole"></div>
+      <div class="mole"></div>
+      <div class="mole"></div>
     </div>
     <div class="score">
       <button class="start-btn">START</button>
